--- a/app/src/main/res/layout/activity_rxjava_demo.xml
+++ b/app/src/main/res/layout/activity_rxjava_demo.xml
@@ -47,5 +47,16 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text="combine"/>
+    <Button
+        android:id="@+id/btn_flatMap"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="flatMap"/>
+    <Button
+        android:id="@+id/btn_changeFlag"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="changeFlag"/>
+
 
 </LinearLayout>
